started styling header and nav

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
     <!-- hero - image -->
     <section class="hero">
-        <h2>A Portfolio</h2>
+        <div>
+            <h2>A Portfolio</h2>
+        </div>
     </section>
 
     <!-- ABOUT ME - RECENT PHOTO - SHORT BIO -->
