added some hero formatting

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- hero - image -->
     <section class="hero">
         <div>
-            <h2>A Portfolio</h2>
+            <h2>Working Portfolio</h2>
         </div>
     </section>
 
