updated CSS for header, samples, changed background image

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <!-- hero - image -->
     <section class="hero">
         <div>
-            <h2>Working Portfolio</h2>
         </div>
     </section>
 
@@ -52,7 +51,7 @@
         </div>
 
         <div class="samples">
-            <article class="sample">
+            <article class="sample-rb">
                 <img src="./assets/images/hero-bg.jpg" alt="Sample image from the Run Buddy website" />
                 <div class="sample-text">
                     <h3 class="sample-name">Run Buddy</h3>
