updated layout, edited CSS for 'About Me', 'My Work', and 'Contact Me'

--- a/index.html
+++ b/index.html
@@ -27,19 +27,24 @@
         </nav>
     </header>
 
-    <!-- hero - image -->
-    <section class="hero">
-        <div>
-        </div>
-    </section>
-
     <!-- ABOUT ME - RECENT PHOTO - SHORT BIO -->
     <section id="about-me" class="bio">
-        <h3>About Me</h3>
-        <img>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis dolorum consectetur perspiciatis soluta
-            quos, laboriosam, ullam earum incidunt iusto, sapiente in. Nam numquam atque voluptatibus blanditiis, quae
-            exercitationem. Iusto, autem?</p>
+        <div>
+            <h3>About Me</h3>
+        </div>
+
+        <div>
+            <img class="bio-content" src="./assets/images/IMG_8006.1.jpg">
+        </div>
+
+        <p>Hi! I'm Madelyn. I am currently working through a coding bootcamp through the University of Texas at San
+            Antonio with the intention of becoming a software developer. I finished a master's degree in Library Science
+            at the University of North Texas in August 2021. I believe this will help me on my career path because much
+            of that degree's focus centered around information organization, the psychology behind human interaction
+            with information, and end-user satisfaction. Take a look at some samples of my work and if you would like to
+            work with me, please reach out!
+        </p>
+
     </section>
 
     <!-- WORK - FLEX: 6 SAMPLES AND PLACEHOLDERS -->
@@ -52,12 +57,16 @@
 
         <div class="samples">
             <article class="sample-rb">
-                <img src="./assets/images/hero-bg.jpg" alt="Sample image from the Run Buddy website" />
+
                 <div class="sample-text">
-                    <h3 class="sample-name">Run Buddy</h3>
-                    <p class="sample-description">An exercise website for a fitness-training company used to gain
-                        mastery over HTML and CSS.</p>
+                    <h3 class="rb-name">Run Buddy</h3>
                 </div>
+
+                <img src="./assets/images/hero-bg.jpg" alt="Sample image from the Run Buddy website" />
+
+                <p class="rb-description">An exercise website for a fitness-training company used to gain
+                    mastery over HTML and CSS.</p>
+
             </article>
 
             <article class="sample">
@@ -89,21 +98,23 @@
     <!-- CONTACT ME - PROFESSIONAL EMAIL - LINK TO GITHUB -->
     <section id="contact-me" class="contact">
         <div class="flex-row">
-            <h2 class="section-title">
+            <h2 class="secondary-title">
                 Contact Me!
             </h2>
         </div>
-        
+
         <div class="contact-info">
-            <div>
-                <h3><a href="mailto:madelyncoliveros@gmail.com">madelyncoliveros@gmail.com</a></h3>
-            </div>
-            <div>
-                <h3>LinkedIn</h3>
-            </div>
-            <div>
-                <h3>GitHub</h3>
-            </div>
+            <ul>
+                <li>
+                    <h3><a href="mailto:madelyncoliveros@gmail.com">Email</a></h3>
+                </li>
+                <li>
+                    <h3><a href="www.linkedin.com/in/madelynoliveros">LinkedIn</a></h3>
+                </li>
+                <li>
+                    <h3><a href="https://github.com/mcoliveros1202">GitHub</a></h3>
+                </li>
+            </ul>
         </div>
     </section>
 
