--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
 
     <!-- WORK - FLEX: 6 SAMPLES AND PLACEHOLDERS -->
     <section id="my-work">
-        <div class="flex-row">
-            <h2 class="section-title">
-                My Work
-            </h2>
+
+        <h2 class="section-title">
+            My Work
+        </h2>
         </div>
 
         <div class="samples">
@@ -62,7 +62,7 @@
                     <h3 class="rb-name">Run Buddy</h3>
                 </div>
 
-                <img src="./assets/images/hero-bg.jpg" alt="Sample image from the Run Buddy website" />
+                <a href="https://mcoliveros1202.github.io/Run-Buddy/"><img src="./assets/images/hero-bg.jpg" alt="Sample image from the Run Buddy website" /></a> 
 
                 <p class="rb-description">An exercise website for a fitness-training company used to gain
                     mastery over HTML and CSS.</p>
@@ -97,11 +97,10 @@
 
     <!-- CONTACT ME - PROFESSIONAL EMAIL - LINK TO GITHUB -->
     <section id="contact-me" class="contact">
-        <div class="flex-row">
-            <h2 class="secondary-title">
-                Contact Me!
-            </h2>
-        </div>
+
+        <h2 class="secondary-title">
+            Contact Me!
+        </h2>
 
         <div class="contact-info">
             <ul>
