tweaked alignment details

--- a/index.html
+++ b/index.html
@@ -33,12 +33,9 @@
             <h3>About Me</h3>
         </div>
 
-        <div>
-            <img class="bio-content" src="./assets/images/IMG_8006.1.jpg">
-        </div>
+        <img class="bio-content" src="./assets/images/IMG_8006.1.jpg">
 
-        <p>Hi! I'm Madelyn. I am currently working through a coding bootcamp through the University of Texas at San
-            Antonio with the intention of becoming a software developer. I finished a master's degree in Library Science
+        <p>Hi! I'm Madelyn. I have a master's degree in Library Science
             at the University of North Texas in August 2021. I believe this will help me on my career path because much
             of that degree's focus centered around information organization, the psychology behind human interaction
             with information, and end-user satisfaction. Take a look at some samples of my work and if you would like to
@@ -62,7 +59,8 @@
                     <h3 class="rb-name">Run Buddy</h3>
                 </div>
 
-                <a href="https://mcoliveros1202.github.io/Run-Buddy/"><img src="./assets/images/hero-bg.jpg" alt="Sample image from the Run Buddy website" /></a> 
+                <a href="https://mcoliveros1202.github.io/Run-Buddy/"><img src="./assets/images/hero-bg.jpg"
+                        alt="Sample image from the Run Buddy website" /></a>
 
                 <p class="rb-description">An exercise website for a fitness-training company used to gain
                     mastery over HTML and CSS.</p>
