added pet-portal project to portfolio

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
             </article>
 
             <article class="sample">
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/150"></a>
+                <a href="https://vet-pet-portal.herokuapp.com/"><img src="./assets/images/pet-portal.png"></a>
                 <div class="sample-text">
-                    <h3 class="sample-name">JavaScript</h3>
-                    <p class="sample-description">The exercise from the Module 3, covering JavaScript.</p>
+                    <h3 class="sample-name">PetPortal</h3>
+                    <p class="sample-description">This application allows both staff and clients to view information about pets and to communication with one another through comments.</p>
                 </div>
             </article>
 
