added ReachTeach to porfolio

--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@
             <article class="sample-rb">
 
                 <div class="sample-text">
-                    <h3 class="rb-name">Run Buddy</h3>
+                    <h3 class="rb-name">ReachTeach</h3>
                 </div>
 
-                <a href="https://mcoliveros1202.github.io/Run-Buddy/"><img src="./assets/images/hero-bg.jpg"
-                        alt="Sample image from the Run Buddy website" /></a>
+                <a href="https://enigmatic-sands-84780.herokuapp.com/"><img src="./assets/images/Screenshot 2022-10-06 at 6.23.10 PM.png"
+                        alt="ReachTeach homepage screenshot" /></a>
 
-                <p class="rb-description">An exercise website for a fitness-training company used to gain
-                    mastery over HTML and CSS.</p>
+                <p class="rb-description">ReachTeach allows parents and teachers to maintain consistent communication and receive real-time updates on classroom activities to encourage parental involvement in student learning.</p>
 
             </article>
 
